Avoid overlap between the columns in the leaderboard

--- a/app/javascript/stylesheets/leaderboard.scss
+++ b/app/javascript/stylesheets/leaderboard.scss
@@ -1,6 +1,7 @@
 .fpc-leaderboard {
   column-count: 4;
   column-width: 29ch;
+  column-gap: 3em;
 }
 
 .fpc-leaderboards__board {
